style: cards (test to fix overlapping bug in projects);

--- a/assets/sass/includes/containers/_cards.scss
+++ b/assets/sass/includes/containers/_cards.scss
@@ -711,14 +711,3 @@
         }
     }
 }
-
-#projects {
-
-    .card {
-
-        &__image {
-            background-color: $light-grey;
-            padding-bottom: 0;
-        }
-    }
-}
